# CMSIS_6

./: CMakeLists.txt
CMSIS/: CMakeLists.txt
CMSIS/Core/: CMakeLists.txt
zephyr/: README.md
